<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libreteam.taxi.Customer_Company"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:background="#191617"
    >

 <LinearLayout
     android:id="@+id/header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_header"
     android:orientation="horizontal" >
   
		<LinearLayout
		    android:id="@+id/logosection"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent" >

			<ImageView
			    android:id="@+id/logo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:background="@drawable/logo_taxi_s"
			    android:paddingBottom="1dp"
			    android:paddingTop="1dp" />

		</LinearLayout>
      
                                       <LinearLayout 
								        android:id="@+id/border"
								        android:orientation="horizontal"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:gravity="center"
								        android:layout_gravity="center"
								        android:background="@android:color/transparent"
								        >                                   
                                                                         
										   <TextView 
										        android:id="@+id/status"
												android:layout_width="wrap_content"
												android:layout_height="fill_parent"
												android:textSize="@dimen/status"
												android:textColor="#191617"
												android:text="@string/taxi_company"
												android:gravity="center"
												android:layout_gravity="center"
												android:layout_marginRight="4dip"/>

									   </LinearLayout>
  		<LinearLayout
  		    android:id="@+id/thirdsection"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_gravity="top"
  		    android:gravity="right" >

  			<ImageView
  			    android:id="@+id/thirdimg"
  			    android:layout_width="wrap_content"
  			    android:layout_height="wrap_content"
  			    android:layout_gravity="center_vertical|right"
  			    android:src="@drawable/thirdsection" />

  		</LinearLayout>									   
                         </LinearLayout>
    
 <RelativeLayout 
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"    
 android:background="@anim/roundcorner">
     
    <TextView 
    android:id="@+id/cityname"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textSize="@dimen/company_header"
	android:textColor="#F7C228"
	android:gravity="center"
	android:text="@string/city_name"
	android:layout_margin="8dip"
	android:background="@android:color/transparent"
    /> 
     
    <Button
    android:id="@+id/downbutton"    
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"    
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"  
    android:background="@anim/arrow_down"  
    android:layout_margin="5dip"
       />

 </RelativeLayout>  
   
  <TextView 
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="0.4"
		android:textColor="@android:color/white"
		android:gravity="center"
		android:singleLine="true"
		android:textSize="@dimen/bottom_line"
		android:text="@string/your_app_would_be"
       /> 
 
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="@anim/roundcorner"
    android:layout_margin="4dip"
    >
  <CheckBox 
    android:id="@+id/che"  
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"   
  />  
     
  <TextView 
    android:id="@+id/all"  
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:textColor="@android:color/white"
	android:gravity="center"
	android:layout_margin="5dip"
	android:text="@string/select_all_taxi_upper_case"
    /> 
    
  <TextView 
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:layout_margin="0dip"
	android:text="@string/recommended"
	android:textSize="9dip"
	android:textColor="@android:color/holo_green_dark"
    />
  
  </LinearLayout>
  
  
 <ListView
    android:id="@+id/listview"
    android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="7.6"
        android:cacheColorHint="#00000000"
        android:divider="#19000000"
        android:dividerHeight="0dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true" 
        android:scrollbars="none"
        android:listSelector="@android:color/transparent" />    
    
</LinearLayout>